compiler/typ/tests/fixtures/diagnostics/0770_polyvar_tuple_payload_mismatch_01.ml.infer.expected
File "0770_polyvar_tuple_payload_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0770_polyvar_tuple_payload_mismatch_01 is not a valid module name.

File "0770_polyvar_tuple_payload_mismatch_01.ml", line 1, characters 35-39:
1 | let _ : [ `P of int * bool ] = `P (true, 0)
                                       ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
